# finans-ai

./: .gitignore  .replit  README.md  main.py  pyproject.toml  translations.py
.chromadb/: chroma.sqlite3
assets/: schema.sql
components/: chat_assistant.py  dashboard.py  manage_budgets.py  manage_categories.py  manage_transactions.py  transaction_form.py
models/: budget.py  database.py  transaction.py
services/: financial_chat_service.py  ollama_service.py  openai_service.py  rag_service.py
tests/: conftest.py  generate_test_data.py  test_budget.py  test_chat_assistant.py  test_data_export.py
utils/: analytics.py  helpers.py
