[project]
name = "repl-nix-finansai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.52.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.39.0",
    "xlsxwriter>=3.2.0",
]
